--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "chartgenerator",
+  "name": "SVGGenerator",
   "version": "1.0.0",
-  "description": "A npm module could be used to generate chart graph",
-  "main": "index.js",
+  "description": "A module could be used to generate chart graph",
+  "main": "build/svg-generator.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/specs/index-spec.js"
   },
   "keywords": [
     "svg",
@@ -14,10 +14,17 @@
   ],
   "author": "Yuntao Zhou <zhyt201@163.com>",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "d3": "^3.5.16",
-    "jquery": "^2.2.2",
-    "jsdom": "^3.1.2",
     "lodash": "^4.6.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-inject": "^3.0.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-main-bower-files": "^1.3.1",
+    "gulp-webpack": "^1.5.0",
+    "jsdom": "^3.1.2"
   }
 }
