--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "gulp-clean": "^0.3.2",
     "gulp-inject": "^3.0.0",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-main-bower-files": "^1.3.1",
     "gulp-webpack": "^1.5.0",
-    "jsdom": "^3.1.2"
+    "jsdom": "^3.1.2",
+    "main-bower-files": "^2.11.1"
   }
 }
