--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "SVGGenerator",
+  "name": "svg-generator",
   "main": "build/svg-generator.js",
   "version": "1.0.0",
   "homepage": "https://github.com/zhyt201/SVGGenerator",
@@ -18,6 +18,7 @@
   ],
   "devDependencies": {
     "d3": "~3.5.16",
-    "lodash": "~4.6.1"
+    "lodash": "~4.6.1",
+    "jquery": "~2.2.2"
   }
 }
