--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SVGGenerator",
+  "name": "svg-generator",
   "version": "1.0.0",
   "description": "A module could be used to generate chart graph",
   "main": "build/svg-generator.js",
@@ -25,6 +25,8 @@
     "gulp-load-plugins": "^1.2.0",
     "gulp-webpack": "^1.5.0",
     "jsdom": "^3.1.2",
-    "main-bower-files": "^2.11.1"
+    "main-bower-files": "^2.11.1",
+    "gulp-connect": "~3.2.1",
+    "gulp-open": "~1.0.0"
   }
 }
